--- a/assets/styles.css
+++ b/assets/styles.css
@@ -32,12 +32,21 @@ header a {
     color: var(--third-color);
 }
 
+header nav {
+    margin: 7px 0;
+}
+
 header nav ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     list-style: none;
+}
+
+header nav ul li a {
+    padding: 10px 15px;
+    1.6vw;
 }
 
 body {
@@ -47,15 +56,24 @@ body {
 }
 
 /*Intro Stye start*/
-mark {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+.intro {
     list-style: none;
+    padding: 10px 15px;
+    background-color: blueviolet;
+}
+
+.intro {
+    text-align: right;
+    color: var(--third-color);
 }
 
 /*about me style start*/
+
+#about-me p {
+    color: white;
+    text-align: right;
+    padding: 10px 15px;
+}
 
 
 /*run-buddy style start*/
@@ -64,13 +82,12 @@ mark {
 }
 
 /*projects style start*/
-
 .past-projects {
-    width: 100%;
+    width: 50%;
     margin: 0 auto;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content:space-around;
 }
 
 .project {
@@ -80,18 +97,15 @@ mark {
     background-color: blueviolet;
 }
 
-.flex-row {
-    display: flex;
-}
 
 .section-title {
     font-size: 25px;
     color: var(--secondary-color);
-    border-bottom: 3px solid;
+    border-right: 3px solid;
     padding-bottom: 20px;
-    text-align: center;
-    margin: 0px auto 35px auto;
-    width: 50%;
+    text-align: left;
+    display: flex;
+    width: 30%;
   }
 
   .project img {
@@ -107,9 +121,20 @@ mark {
     list-style: none;
 }
 
+.contact li{
+    color: white;
+    padding: 10px 15px;
+}
+
+.contact li a {
+    color: white;
+    text-decoration: none;
+}
+
 /*footer style*/
 footer {
     text-align: center;
     background-color: lime;
+    padding: 10px 0 20px 0;
 }
 
