--- a/assets/styles.css
+++ b/assets/styles.css
@@ -16,20 +16,22 @@ header{
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 25px 35px;
-    background-color: var(--second-color);
+    background-image: url(./images/background.jpg);
     background-size: cover;
     background-position: 80%;
 }
 
 header h1 {
-    font-size: 40px;
+    font-size: 5vw;
     font-weight: bold;
     color: var(--third-color);
+    text-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
 }
 
 header a {
     text-decoration: none;
     color: var(--third-color);
+    text-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
 }
 
 header nav {
@@ -46,11 +48,12 @@ header nav ul {
 
 header nav ul li a {
     padding: 10px 15px;
-    1.6vw;
+    font-size: 1.7vw;
 }
 
 body {
-    color: var(--first-color);
+    color: var(--third-color);
+    text-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: lightgray;
 }
@@ -59,12 +62,19 @@ body {
 .intro {
     list-style: none;
     padding: 10px 15px;
-    background-color: blueviolet;
+    text-align: center;
+    color: var(--third-color);
+    background-color:#00BFFF;
 }
 
-.intro {
-    text-align: right;
-    color: var(--third-color);
+.intro h2 {
+    font-size: 2.6vw;
+    font-family: ui-rounded;
+}
+
+.intro h3 {
+    font-style: italic;
+    font-size: 1.5vw;
 }
 
 /*about me style start*/
@@ -74,30 +84,43 @@ body {
 }
 
 .about-me-title {
-    width: 30%;
-    border-right: 3px solid blue;
+    width: 20%;
+    border-right: 4px solid blue;
     margin-top: 10px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    font-size: 1.8rem;
+    font-size: 2.3vw;
 }
 
 .about-me-title h2 {
     margin-right: 20px;
 }
 
+.my-pic {
+    display: flex;
+    width: 15%;
+    margin-top: 15px;
+    margin-left: 15px;
+}
+
+.my-pic img {
+    width: 100%;
+    border: 4px solid blue;
+    box-shadow:  0 0 15px rgba(0, 0, 0, 0.7);
+}
+
 .about-me-text {
-    width: 70%;
+    width: 65%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 #about-me p {
-    color: white;
+    color:var(--third-color);
     padding: 10px 15px;
-    font-size: 1.8rem;
+    font-size: 1.8vw;
 }
 
 
@@ -111,14 +134,14 @@ body {
 }
 
 .past-projects-title{
-    width: 30%;
+    width: 20%;
     display: flex;
     justify-content: flex-end;
-    border-right: 3px solid blue;
+    border-right: 4px solid blue;
+    font-size: 2.5vw;
 }
 
 .past-projects-title h2 {
-    font-size: 2.5rem;
     margin-right: 19px;
 }
 
@@ -150,7 +173,10 @@ body {
   }
 
   .project img {
-      width: 100%
+      width: 100%;
+      border: 4px solid blue;
+      box-shadow:  0 0 15px rgba(0, 0, 0, 0.7);
+      
   }
 
   .projects-smaller {
@@ -174,6 +200,7 @@ body {
 /*contact me style start*/
 #contact {
     display: flex;
+    margin-bottom: 10px;
 }
 
 .contact-info {
@@ -188,12 +215,13 @@ body {
     justify-content: space-between;
     align-items: center;
     list-style: none;
-    color: white;
+    color:var(--third-color);
     padding: 10px 15px;
+    font-size: 1.8vw;
 }
 
 .contact-info li a {
-    color: white;
+    color: var(--third-color);
     text-decoration: none;
     padding: 15px;
 }
@@ -201,7 +229,24 @@ body {
 /*footer style*/
 footer {
     text-align: center;
-    background-color: lime;
+    background-image: url(./images/background.jpg);
     padding: 10px 0 20px 0;
+    color: var(--third-color);
+    font-size: 1.5vw;
 }
 
+/*for media screens*/
+@media screen and (max-width: 575px) {
+    header {
+        flex-direction: column;
+    }
+
+    header h1 {
+        text-align: center;
+    }
+
+    header nav ul{
+        flex-direction: column;
+        justify-content: center;
+    }
+}
