--- a/assets/styles.css
+++ b/assets/styles.css
@@ -98,7 +98,7 @@ body {
 
 .my-pic {
     display: flex;
-    width: 15%;
+    width: 20%;
     margin-top: 15px;
     margin-left: 20px;
 }
@@ -107,10 +107,11 @@ body {
     width: 100%;
     border: 4px solid var(--first-color);
     box-shadow:  0 0 15px rgba(0, 0, 0, 0.7);
+    height: 200px;
 }
 
 .about-me-text {
-    width: 65%;
+    width: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -172,7 +173,11 @@ body {
       width: 100%;
       border: 4px solid var(--first-color);
       box-shadow:  0 0 15px rgba(0, 0, 0, 0.7);
-      
+      opacity: 0.5;
+  }
+
+  .project img:hover {
+      opacity: 1;
   }
 
   .projects-smaller {
@@ -285,6 +290,10 @@ footer {
         margin: 10px 0px 10px 0px;
     }
 
+    .my-pic img {
+        height: auto;
+    }
+
     .about-me-text {
         width: 100%;
     }
@@ -317,6 +326,7 @@ footer {
         bottom: 10px;
         left: 8px;
     }
+
 
     .pjtext {
         bottom: 4px;
