--- a/assets/styles.css
+++ b/assets/styles.css
@@ -123,6 +123,31 @@ body {
     font-size: 1.8vw;
 }
 
+/*Skills*/
+#skills {
+    display: flex;
+    margin-top: 50px;
+    justify-content: space-between;
+}
+
+.Slist {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.skillList  {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.skillList li {
+    list-style: none;
+    font-size: 3vw;
+    padding: 10px 15px;
+}
+
 
 /*projects style start*/
 #projects {
